# DinfoStash

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  __main__.py  json_schema.json  pyproject.toml
ResumeGenerator/src/resume/resume_templates/: __init__.py  compressed_single_column.py
example/: example.py
example/inputs/: example_resume_data.json
example/outputs/: John_Doe_SingleColumnCompressedTemplate.tex  John_Doe_SingleColumnNoPhotoTemplate.tex  John_Doe_SingleColumnPhoto.tex  John_Doe_SingleColumnPhotoCompressedTemplate.tex
src/dinfostash/: __init__.py  cli.py  config.py  firebase.py  main.py
src/dinfostash/agent/: constants.py  services.py
src/dinfostash/agent/prompts/: experience_system_prompt.txt  project_system_prompt.txt
src/dinfostash/auth/: dependencies.py  routes.py  services.py  utils.py
src/dinfostash/data/: constants.py  dependencies.py  models.py  router.py  services.py
src/dinfostash/resume/: __init__.py  constants.py  dependencies.py  router.py  services.py  utils.py
src/dinfostash/resume/resume_templates/: __init__.py  compressed_single_column.py  single_column_content.py  utils.py
src/dinfostash/storage/: constants.py  services.py
src/dinfostash/user/: dependencies.py  router.py
src/resumegenerator/: config.py  main.py
src/resumegenerator/data/: models.py
src/resumegenerator/resume/resume_templates/: single_column_content.py
tests/: test_cli_application.py  test_resume_generator.py
tests/data/: test_data_modles.py
tests/routes/: test_data_routes.py
